Parser/cool.output
Terminals unused in grammar

   ERROR


State 13 conflicts: 2 shift/reduce
State 19 conflicts: 2 shift/reduce
State 132 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error '}' ';'

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | error

    8 feature_list: feature
    9             | feature_list feature
   10             | %empty

   11 feature: OBJECTID ':' TYPEID ASSIGN expr ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   14        | error ';'

   15 formal_list: formal
   16            | formal_list ',' formal
   17            | %empty

   18 formal: OBJECTID ':' TYPEID

   19 expr_list: expr ';'
   20          | expr_list expr ';'
   21          | error ';'
   22          | error

   23 parameters: %empty
   24           | expr
   25           | parameters ',' expr

   26 case_list: case
   27          | case_list case

   28 case: OBJECTID ':' TYPEID DARROW expr ';'

   29 let_list: IN expr
   30         | ',' OBJECTID ':' TYPEID let_list
   31         | ',' OBJECTID ':' TYPEID ASSIGN expr let_list
   32         | IN error
   33         | error let_list

   34 expr: OBJECTID ASSIGN expr
   35     | expr '.' OBJECTID '(' parameters ')'
   36     | expr '@' TYPEID '.' OBJECTID '(' parameters ')'
   37     | OBJECTID '(' parameters ')'
   38     | IF expr THEN expr ELSE expr FI
   39     | WHILE expr LOOP expr POOL
   40     | '{' expr_list '}'
   41     | LET OBJECTID ':' TYPEID let_list
   42     | LET OBJECTID ':' TYPEID ASSIGN expr let_list
   43     | CASE expr OF case_list ESAC
   44     | NEW TYPEID
   45     | ISVOID expr
   46     | expr '+' expr
   47     | expr '-' expr
   48     | expr '*' expr
   49     | expr '/' expr
   50     | '~' expr
   51     | expr '<' expr
   52     | expr LE expr
   53     | expr '=' expr
   54     | NOT expr
   55     | '(' expr ')'
   56     | OBJECTID
   57     | INT_CONST
   58     | STR_CONST
   59     | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 35 36 37 55
')' (41) 13 35 36 37 55
'*' (42) 48
'+' (43) 46
',' (44) 16 25 30 31
'-' (45) 47
'.' (46) 35 36
'/' (47) 49
':' (58) 11 12 13 18 28 30 31 41 42
';' (59) 4 5 6 11 12 13 14 19 20 21 28
'<' (60) 51
'=' (61) 53
'@' (64) 36
'{' (123) 5 6 13 40
'}' (125) 4 5 6 13 40
'~' (126) 50
error (256) 4 7 14 21 22 32 33
CLASS (258) 5 6
ELSE (259) 38
FI (260) 38
IF (261) 38
IN (262) 29 32
INHERITS (263) 6
LET (264) 41 42
LOOP (265) 39
POOL (266) 39
THEN (267) 38
WHILE (268) 39
CASE (269) 43
ESAC (270) 43
OF (271) 43
DARROW (272) 28
NEW (273) 44
ISVOID (274) 45
STR_CONST (275) 58
INT_CONST (276) 57
BOOL_CONST (277) 59
TYPEID (278) 5 6 11 12 13 18 28 30 31 36 41 42 44
OBJECTID (279) 11 12 13 18 28 30 31 34 35 36 37 41 42 56
ASSIGN (280) 11 31 34 42
NOT (281) 54
LE (282) 52
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4, on right: 1 3
class (48)
    on left: 5 6 7, on right: 2 3
feature_list (49)
    on left: 8 9 10, on right: 5 6 9
feature (50)
    on left: 11 12 13 14, on right: 8 9
formal_list (51)
    on left: 15 16 17, on right: 13 16
formal (52)
    on left: 18, on right: 15 16
expr_list (53)
    on left: 19 20 21 22, on right: 20 40
parameters (54)
    on left: 23 24 25, on right: 25 35 36 37
case_list (55)
    on left: 26 27, on right: 27 43
case (56)
    on left: 28, on right: 26 27
let_list (57)
    on left: 29 30 31 32 33, on right: 30 31 33 41 42
expr (58)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 57 58 59, on right: 11 13 19 20 24 25 28 29 31 34
    35 36 38 39 42 43 45 46 47 48 49 50 51 52 53 54 55


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error . '}' ';'
    7 class: error .

    '}'  shift, and go to state 6

    $default  reduce using rule 7 (class)


State 2

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class_list: error '}' . ';'

    ';'  shift, and go to state 11


State 7

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 12
    '{'       shift, and go to state 13


State 8

    0 $accept: program $end .

    $default  accept


State 9

    7 class: error .

    $default  reduce using rule 7 (class)


State 10

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 11

    4 class_list: error '}' ';' .

    $default  reduce using rule 4 (class_list)


State 12

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 14


State 13

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    error     [reduce using rule 10 (feature_list)]
    OBJECTID  [reduce using rule 10 (feature_list)]
    '}'       reduce using rule 10 (feature_list)

    feature_list  go to state 17
    feature       go to state 18


State 14

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 19


State 15

   14 feature: error . ';'

    ';'  shift, and go to state 20


State 16

   11 feature: OBJECTID . ':' TYPEID ASSIGN expr ';'
   12        | OBJECTID . ':' TYPEID ';'
   13        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 21
    '('  shift, and go to state 22


State 17

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 23

    feature  go to state 24


State 18

    8 feature_list: feature .

    $default  reduce using rule 8 (feature_list)


State 19

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    error     [reduce using rule 10 (feature_list)]
    OBJECTID  [reduce using rule 10 (feature_list)]
    '}'       reduce using rule 10 (feature_list)

    feature_list  go to state 25
    feature       go to state 18


State 20

   14 feature: error ';' .

    $default  reduce using rule 14 (feature)


State 21

   11 feature: OBJECTID ':' . TYPEID ASSIGN expr ';'
   12        | OBJECTID ':' . TYPEID ';'

    TYPEID  shift, and go to state 26


State 22

   13 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 27

    $default  reduce using rule 17 (formal_list)

    formal_list  go to state 28
    formal       go to state 29


State 23

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 30


State 24

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


State 25

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 31

    feature  go to state 24


State 26

   11 feature: OBJECTID ':' TYPEID . ASSIGN expr ';'
   12        | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift, and go to state 32
    ';'     shift, and go to state 33


State 27

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 34


State 28

   13 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 35
    ','  shift, and go to state 36


State 29

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


State 30

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 31

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 37


State 32

   11 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 52


State 33

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


State 34

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 53


State 35

   13 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 54


State 36

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 27

    formal  go to state 55


State 37

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 38

   38 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 56


State 39

   41 expr: LET . OBJECTID ':' TYPEID let_list
   42     | LET . OBJECTID ':' TYPEID ASSIGN expr let_list

    OBJECTID  shift, and go to state 57


State 40

   39 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 58


State 41

   43 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 59


State 42

   44 expr: NEW . TYPEID

    TYPEID  shift, and go to state 60


State 43

   45 expr: ISVOID . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 61


State 44

   58 expr: STR_CONST .

    $default  reduce using rule 58 (expr)


State 45

   57 expr: INT_CONST .

    $default  reduce using rule 57 (expr)


State 46

   59 expr: BOOL_CONST .

    $default  reduce using rule 59 (expr)


State 47

   34 expr: OBJECTID . ASSIGN expr
   37     | OBJECTID . '(' parameters ')'
   56     | OBJECTID .

    ASSIGN  shift, and go to state 62
    '('     shift, and go to state 63

    $default  reduce using rule 56 (expr)


State 48

   54 expr: NOT . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 64


State 49

   50 expr: '~' . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 65


State 50

   40 expr: '{' . expr_list '}'

    error       shift, and go to state 66
    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_list  go to state 67
    expr       go to state 68


State 51

   55 expr: '(' . expr ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 69


State 52

   11 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   35 expr: expr . '.' OBJECTID '(' parameters ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' parameters ')'
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . LE expr
   53     | expr . '=' expr

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78
    ';'  shift, and go to state 79


State 53

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


State 54

   13 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 80


State 55

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


State 56

   35 expr: expr . '.' OBJECTID '(' parameters ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' parameters ')'
   38     | IF expr . THEN expr ELSE expr FI
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . LE expr
   53     | expr . '=' expr

    THEN  shift, and go to state 81
    LE    shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78


State 57

   41 expr: LET OBJECTID . ':' TYPEID let_list
   42     | LET OBJECTID . ':' TYPEID ASSIGN expr let_list

    ':'  shift, and go to state 82


State 58

   35 expr: expr . '.' OBJECTID '(' parameters ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' parameters ')'
   39     | WHILE expr . LOOP expr POOL
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . LE expr
   53     | expr . '=' expr

    LOOP  shift, and go to state 83
    LE    shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78


State 59

   35 expr: expr . '.' OBJECTID '(' parameters ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' parameters ')'
   43     | CASE expr . OF case_list ESAC
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . LE expr
   53     | expr . '=' expr

    OF   shift, and go to state 84
    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78


State 60

   44 expr: NEW TYPEID .

    $default  reduce using rule 44 (expr)


State 61

   35 expr: expr . '.' OBJECTID '(' parameters ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' parameters ')'
   45     | ISVOID expr .
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . LE expr
   53     | expr . '=' expr

    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 45 (expr)


State 62

   34 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 85


State 63

   37 expr: OBJECTID '(' . parameters ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    $default  reduce using rule 23 (parameters)

    parameters  go to state 86
    expr        go to state 87


State 64

   35 expr: expr . '.' OBJECTID '(' parameters ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' parameters ')'
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . LE expr
   53     | expr . '=' expr
   54     | NOT expr .

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 54 (expr)


State 65

   35 expr: expr . '.' OBJECTID '(' parameters ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' parameters ')'
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   50     | '~' expr .
   51     | expr . '<' expr
   52     | expr . LE expr
   53     | expr . '=' expr

    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 50 (expr)


State 66

   21 expr_list: error . ';'
   22          | error .

    ';'  shift, and go to state 88

    $default  reduce using rule 22 (expr_list)


State 67

   20 expr_list: expr_list . expr ';'
   40 expr: '{' expr_list . '}'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '}'         shift, and go to state 89
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 90


State 68
